# robotics

./: .gitignore  README.md
.claude/agents/: README.md  elon.md  gill.md  tom.md
docs/: 00-项目状态与交接.md
docs/01-ros2-microros-serial/: 00-架构文档.md  01-接口契约.md  02-任务卡-Tom.md  03-任务卡-Gill.md  04-变更-F103换芯与硬件到位.md  05-PhaseB攻坚计划.md  06-exo_msgs设计草案.md  07-任务卡-exo_msgs-MA-Tom.md  08-任务卡-exo_msgs-MA-Gill.md  09-任务卡-exo_msgs-MB-Tom.md  10-任务卡-exo_msgs-MB-Gill.md  11-exo_msgs-MB放行前复核.md  12-变更-F407换芯设计.md
firmware/f103-microros/: CMakeLists.txt  FreeRTOSConfig.h  README.md  STM32F103RB_FLASH.ld  colcon.meta.annotated  toolchain-arm-m3-libmicroros.cmake  toolchain-arm-m3.cmake
firmware/f103-microros/src/: dwt_time.c  dwt_time.h  exo_crc.c  exo_crc.h  main.c  microros_app.c  microros_app.h  microros_transport.c  microros_transport.h  stm32f1xx_it.c  uart_ll.h
ros2_ws/: README.md  selftest_t2.sh
ros2_ws/scripts/: hw_acceptance.sh  t8_gonogo_evidence.sh
ros2_ws/src/exo_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/exo_bringup/launch/: exo_cmd.launch.py  loopback_test.launch.py
ros2_ws/src/exo_bringup/test/: test_copyright.py  test_flake8.py
ros2_ws/src/exo_cmd/: package.xml  setup.cfg  setup.py
ros2_ws/src/exo_cmd/exo_cmd/: crc.py  exo_cmd_node.py  link_health.py  loopback_node.py  qos.py
ros2_ws/src/exo_cmd/test/: test_copyright.py  test_crc.py  test_link_health_adversarial.py  test_node_exo_msgs.py  test_pep257.py  test_roundtrip_logic.py  test_rtt_window.py
ros2_ws/src/exo_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/exo_msgs/msg/: ExoCmd.msg  ExoHeader.msg  ExoStatus.msg  LinkHealth.msg
tools/: codex-review.sh  env-check.sh  host-common.sh  install-toolchain.sh  run-agent.sh  run-scenario.sh
