<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>exo_cmd</name>
  <version>1.7.0</version>
  <description>
    WSL-side ROS2 nodes for the exoskeleton serial loopback (exo_msgs M-A).
    Publishes /exo/cmd_heartbeat (exo_msgs/ExoCmd, 10 Hz; header.seq wraps
    mod 2^32, header.stamp_mono_ns, optional header.crc; payload decoupled from
    seq) and subscribes /exo/mcu_status (exo_msgs/ExoStatus) to verify the
    round-trip and monitor link health (RTT / loss / duplicate / reconciliation,
    contract §7), publishing /exo/link_health (exo_msgs/LinkHealth). Also ships
    a local loopback node with fault injection that mimics the MCU for
    hardware-free self-test.
    Interface contract: docs/01-ros2-microros-serial/01-接口契约.md (v1.7).
  </description>
  <maintainer email="lhqonly@users.noreply.github.com">Tom</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <depend>exo_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
